fixed modal overflow in p-dialog

--- a/GUI/src/app/nav-bar/nav-bar.component.css
+++ b/GUI/src/app/nav-bar/nav-bar.component.css
@@ -1,4 +1,5 @@
 ::ng-deep .ui-dialog {
+  overflow: scroll;
   width: 90% !important;
   max-height: 95% !important;
 }
